# Simple_app_like_avito

./: README.md  db.sqlite3  file_structure.txt  manage.py  pyproject.toml  pytest.ini
DZ27/: asgi.py  settings.py  urls.py  wsgi.py
ads/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
ads/migrations/: 0001_initial.py  0002_alter_ad_price.py  0002_remove_ad_category_id.py  0003_alter_ad_description_alter_ad_is_published_and_more.py
categories/: admin.py  models.py  urls.py  views.py
categories/migrations/: 0001_initial.py  0002_category_slug.py  0003_alter_category_slug.py
datasets/: ads.json  ads_csv_to_JSON.py  categories.json  categories_csv_to_JSON.py  import_data.py  location.json  location_csv_to_JSON.py  user.json  user_csv_to_JSON.py
tests/: conftest.py  factories.py  fixtures.py
tests/ads/: ad_list_test.py  ad_post_test.py  ad_retrieve_test.py
tests/selections/: selection_post_test.py
users/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_location_lat_alter_location_lng.py  0003_alter_location_lat_alter_location_lng.py  0004_alter_user_managers_user_date_joined_user_email_and_more.py  0005_selection.py  0006_user_birth_date.py  0007_remove_user_age_alter_user_birth_date.py  0008_alter_user_email.py  0009_alter_user_email.py
